# context_bridge

./: .gitignore  README.md  config.example.toml  pyproject.toml
backend/: detector.py  main.py  requirements.txt  schemas.py  utils.py  watcher_manager.py
backend/routers/: agents.py  config.py  conversations.py  monitor.py  summaries.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/electron/: main.cjs  main.ts  preload.cjs  preload.ts  python-manager.ts
frontend/scripts/: build-icon.cjs  dev-electron.cjs
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AgentCard.tsx  AgentIcon.tsx  Layout.tsx  LoadingSpinner.tsx  MessageBubble.tsx  SummaryPanel.tsx
frontend/src/hooks/: useApi.ts  useConfigSync.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  zh.json
frontend/src/pages/: ConversationDetailPage.tsx  ConversationsPage.tsx  HomePage.tsx  SettingsPage.tsx  SummariesPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
src/context_bridge/: __init__.py  config.py  core.py  detector.py  session.py  summarizer.py  watcher.py  watcher_manager.py
src/context_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/context_bridge/parsers/: __init__.py  base.py  claude.py  cline.py  codex.py  cursor.py
