[project]
name = "context-bridge"
version = "0.1.0"
description = "AI Agent context bridge - monitor, summarize, and restore conversation context"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=4.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
